--- a/app/src/main/res/layout/activity_new_social.xml
+++ b/app/src/main/res/layout/activity_new_social.xml
@@ -14,8 +14,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="157dp"
         android:ems="10"
+        android:hint="Event Name"
         android:inputType="textPersonName"
-        android:text="Event Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,8 +28,8 @@
         android:layout_marginStart="41dp"
         android:layout_marginEnd="157dp"
         android:ems="10"
+        android:hint="Description"
         android:inputType="textMultiLine"
-        android:text="Description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,8 +49,8 @@
         android:layout_marginStart="41dp"
         android:layout_marginEnd="157dp"
         android:ems="10"
+        android:hint="MM/DD/YYYY"
         android:inputType="date"
-        android:text="MM/DD/YYYY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,14 +70,17 @@
 
     <ImageButton
         android:id="@+id/uploadimg"
-        android:layout_width="217dp"
-        android:layout_height="162dp"
+        android:layout_width="338dp"
+        android:layout_height="296dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="152dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="32dp"
+        android:scaleType="fitXY"
+        android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.615"
+        app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/avatars"
         tools:srcCompat="@tools:sample/avatars" />
 </android.support.constraint.ConstraintLayout>
