--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -10,20 +10,41 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="16dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="154dp"
+            android:fontFamily="sans-serif"
+            android:text="on 1/11/11"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="10sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/img"
+            app:layout_constraintTop_toBottomOf="@+id/poster" />
+
+        <TextView
             android:id="@+id/poster"
-            android:layout_width="194dp"
-            android:layout_height="18dp"
-            android:layout_marginStart="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="108dp"
+            android:fontFamily="sans-serif"
             android:text="smith@gmail.com"
             android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/textView"
-            tools:layout_editor_absoluteY="80dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/img"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <ImageView
             android:id="@+id/img"
             android:layout_width="176dp"
             android:layout_height="178dp"
+            android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -34,30 +55,46 @@
             android:id="@+id/eventName"
             android:layout_width="212dp"
             android:layout_height="56dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="13dp"
+            android:fontFamily="sans-serif"
             android:text="Name"
             android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="30sp"
-            tools:layout_editor_absoluteX="186dp"
-            tools:layout_editor_absoluteY="16dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/img"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="sans-serif"
             android:text="posted by:"
             android:textColor="@color/common_google_signin_btn_text_dark_focused"
-            tools:layout_editor_absoluteX="186dp"
-            tools:layout_editor_absoluteY="80dp" />
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/img"
+            app:layout_constraintTop_toBottomOf="@+id/eventName" />
 
         <TextView
             android:id="@+id/interested"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Currently x people interested"
+            android:layout_height="19dp"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="sans-serif"
+            android:text="X people are interested!"
             android:textColor="@color/colorAccent"
             android:textSize="12sp"
-            tools:layout_editor_absoluteX="186dp"
-            tools:layout_editor_absoluteY="111dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/date"
+            app:layout_constraintTop_toBottomOf="@+id/date" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
